--- a/lab2/css/lab.css
+++ b/lab2/css/lab.css
@@ -12,11 +12,13 @@
 #head {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 400%;
-    color: #f5646498 
+    color: #f5646498;
+    
   }
 
 #body {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 200%;
-    color: #f5646498 
+    color: #f5646498;
+    
   }
